<resources>
    <string name="app_name">DrawerApp</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="upload_product">Upload product</string>
    <string name="edit_product">Edit product</string>
    <string name="delete_product">"Delete product "</string>
    <string name="order_received">Order received</string>
    <string name="unpaid_order">Unpaid order</string>
    <string name="history">History</string>
    <string name="image">Image</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email</string>
    <string name="company_reg_no">Company Reg No.:</string>
    <string name="enter_company_reg_no">Enter company reg no.</string>
    <string name="company_name">Company name:</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter usernsme</string>
    <string name="address">Address:</string>
    <string name="enter_address">Enter address</string>
    <string name="contact_no">Contact no.:</string>
    <string name="enter_contact_no">Enter contact no.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description:</string>
    <string name="enter_description">Enter description</string>
    <string name="ic">IC:</string>
    <string name="enter_ic">Enter IC</string>
    <string name="business_hour">Business hour:</string>
    <string name="enter_business_hour">Enter business hour</string>
</resources>