<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/image"
        android:id="@+id/menuImage"/>
    <item
        android:title="@string/profile"
        android:id="@+id/menuProfile"/>
    <item
        android:title="@string/upload_product"
        android:id="@+id/menuUploadProduct"/>
    <item
        android:title="@string/edit_product"
        android:id="@+id/menuEditProduct"/>
    <item
        android:title="@string/delete_product"
        android:id="@+id/menuDeleteProduct"/>
    <item
        android:title="@string/order_received"
        android:id="@+id/menuOrderReceived"/>
    <item
        android:title="@string/unpaid_order"
        android:id="@+id/menuUnpaidOrder"/>
    <item
        android:title="@string/history"
        android:id="@+id/menuHistory"/>

</menu>